# ThinkiPlex

./: .gitignore  DEVELOPMENT.md  README.md  pyproject.toml  requirements.txt  setup.py
config/: thinkiplex.yaml.sample
config/prompts/: analyze_prompt.txt  comprehensive_prompt.txt  course_notes_prompt.txt  summarize_prompt.txt  transcribe_prompt.txt
data/courses/reclaiming-you-2025/: reclaimingyou2025.json
docs/: index.md  mkdocs.yml  session_types.md
docs/api/: config.md  pdf.md  transcription.md  utils.md
docs/guides/: authentication.md  configuration.md  development.md  installation.md  pdf-generation.md  transcription.md
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_config.py  test_media.py  test_parallel.py
thinkiplex/: __init__.py  __main__.py  main.py
thinkiplex/cli/: __init__.py  cleanup.py  course_selector.py  main.py  scripts.py  wizard.py
thinkiplex/downloader/: __init__.py  php_wrapper.py
thinkiplex/downloader/php/: .download_tracking  compose.selective.yaml  compose.yaml  config.php  thinkidownloader3.php
thinkiplex/downloader/php/include/: downloader.functions.php  file.functions.php
thinkiplex/organizer/: __init__.py  audio.py  main.py  media.py  metadata.py  organizer.py
thinkiplex/pdf/: __init__.py  converters.py  formatter.py  generator.py
thinkiplex/transcribe/: __init__.py  processor.py
thinkiplex/transcribe/services/: __init__.py  assemblyai_service.py  claude_service.py
thinkiplex/utils/: __init__.py  config.py  exceptions.py  logging.py  parallel.py  schemas.py
